syntax = "proto3";

package Proto.Command.UseCase;

service UseCaseCommandService {
  rpc CreateTimeSlotControl (CreateTimeSlotControlProtoCommand) returns (CommandResponse);
  rpc LoadTimeSlotControl (LoadTimeSlotControlProtoCommand) returns (CommandResponse);
}

message CreateTimeSlotControlProtoCommand {
  string ticketId = 1;
  string viewId = 2;
}

message LoadTimeSlotControlProtoCommand {
  string timeSlotId = 1;
  string viewId = 2;
}

message CommandResponse {
  bool success = 1;
}
